v4.1.7 (work in progress)
     * Aligh common utilities with MCPL project (specifically CMake code, test
       code, and C file utils).
     * Fix potentially uninitialised variable in pyrolythic graphite model (in
       the move constructor of the LCHelper::Overlay class).
     * ...

v4.1.6 2025-03-30
     * Fix bug which prevented more than 32 phases in multiphase materials
       (github issue #252).
     * Remove two leftover lines at top of LICENSE files. Now they are exactly
       the same as the file at http://www.apache.org/licenses/LICENSE-2.0.
     * Remove space in NCDefs.hh in `operator ""_s` which introduced compilation
       warning with Intel OneAPI compiler version 2025.1.

v4.1.4 2025-03-03
     * README files for the ncrystal-core, ncrystal-python, and ncrystal-verify
       packages are no longer identical to the main README file, but has content
       more appropriate for the specific sub-package.
     * Allow tests specific to ncrystal-verify, which validates the
       environment. For now this is used to add a test of downstream CMake
       projects.
     * ncrystal-verify gets -v/--verbose option for always showing the test
       output.
     * Add the possibility of using CTests from ncrystal_core (i.e. without any
       sort of intermingling with ncrystal_python/ and tests/). This is mostly
       intended for packaging testing, where it might be useful to build
       ncrystal-core completely independent from other packages. For now there
       is only a single test application there, but at least it is a start (it
       is not intended that there should be a large amount of such tests
       anyway).
     * Update cmake_minimum_required statements in CMake code.
     * Fix faulty assert statement in NCCFileUtils.cc.
     * More numerically stable rotation matrix determinant calculations.
     * Stop using std::swap_ranges on identical ranges, since this is undefined
       behaviour and gave issues on Windows.
