@@ -1,0 +1,48 @@
+Calling nc_vdos.extractKnl( m=27, T=0.5, vdoslux=1, target_emax=0 )
+NCrystal WARNING: Discarding 30 edges of provided kernel data due to missing S values.
+ Got alpha : NumpyArray( shape=100 )
+ Got beta : NumpyArray( shape=170 )
+ Got sab : NumpyArray( shape=17000 )
+ Got mass_amu : 27.0
+ Got temperature : 0.5
+ Got scatxs : 1.0
+ Got suggested_emax : 1.0
+
+Calling nc_vdos.extractKnl( m=27, T=300, vdoslux=1, target_emax=0 )
+ Got alpha : NumpyArray( shape=100 )
+ Got beta : NumpyArray( shape=200 )
+ Got sab : NumpyArray( shape=20000 )
+ Got mass_amu : 27.0
+ Got temperature : 300.0
+ Got scatxs : 1.0
+ Got suggested_emax : 1.0
+
+Calling nc_vdos.extractKnl( m=27, T=300, vdoslux=1, target_emax=50 )
+ Got alpha : NumpyArray( shape=100 )
+ Got beta : NumpyArray( shape=200 )
+ Got sab : NumpyArray( shape=20000 )
+ Got mass_amu : 27.0
+ Got temperature : 300.0
+ Got scatxs : 1.0
+ Got suggested_emax : 50.0
+
+Calling nc_vdos.extractKnl( m=27, T=300, vdoslux=4, target_emax=0 )
+ Got alpha : NumpyArray( shape=800 )
+ Got beta : NumpyArray( shape=1600 )
+ Got sab : NumpyArray( shape=1280000 )
+ Got mass_amu : 27.0
+ Got temperature : 300.0
+ Got scatxs : 1.0
+ Got suggested_emax : 8.0
+
+Calling nc_vdos.extractKnl( m=27, T=300, vdoslux=4, target_emax=0.5 )
+ Got alpha : NumpyArray( shape=800 )
+ Got beta : NumpyArray( shape=1600 )
+ Got sab : NumpyArray( shape=1280000 )
+ Got mass_amu : 27.0
+ Got temperature : 300.0
+ Got scatxs : 1.0
+ Got suggested_emax : 0.5
+
+Calling nc_vdos.extractKnl( m=27, T=0.5, vdoslux=1, target_emax=5000 )
+Caught expected NCCalcError('VDOS expansion too slow - can not reach E=5000eV after 10000 phonon convolutions (likely causes: either the target energy value is too high, vdoslux too low, the temperature too high, or the VDOS is very unusual).')
